--- a/apps/sandbox/src/app/app.component.html
+++ b/apps/sandbox/src/app/app.component.html
@@ -1,3 +1,5 @@
 <server port="8080">
-  <get url="/some-url" someController></get>
+  <get url="/some-url" contentType="text/html">
+    <b>Some content</b>
+  </get>
 </server>
